feat(CB2-14360): update the mot pdf documents to include a recalls banner

--- a/src/main/resources/assets/stylesheets/cvs-version-1.hbs
+++ b/src/main/resources/assets/stylesheets/cvs-version-1.hbs
@@ -387,6 +387,35 @@ display: none
 display: block
 }
 
+.recalls {
+padding: 10px;
+display: inline-block;
+}
+
+.recalls__icon {
+display: inline;
+padding-right: 32pt;
+float: left;
+}
+
+.recalls__icon-img {
+
+}
+
+.recalls__content {
+display: inline;
+}
+
+.recalls__content-header {
+padding-bottom: 0;
+margin-bottom: 0;
+}
+
+.recalls__content-text {
+padding-top: 0;
+margin-top: 0;
+}
+
 .test-information__two-columns {
 display: table
 }
