feat(CB2-14360): fix icon not displaying

--- a/src/main/resources/views/CommercialVehicles/recalls.hbs
+++ b/src/main/resources/views/CommercialVehicles/recalls.hbs
@@ -1,6 +1,6 @@
 <div class = "recalls">
     <div class = "recalls__icon">
-        <img src="{{@root.root}}/assets/images/info-icon.png" class="recalls__icon-img"/>
+        <img src="{{root}}/assets/images/info-icon.png" alt="info" class="recalls__icon-img"/>
     </div>
     <div class = "recalls__content">
         <h2 class = "recalls__content-header"> This vehicle has an outstanding recall </h2>
