--- a/src/main/resources/assets/stylesheets/cvs-version-1.hbs
+++ b/src/main/resources/assets/stylesheets/cvs-version-1.hbs
@@ -285,8 +285,8 @@ font-weight: 700
 
 .results__wrapper {
 border-left: 10pt solid #9e9e9e;
-padding: 8.5pt 0 8.5pt 20pt;
-margin-bottom: 11pt
+padding: 8.5pt 0 0 20pt;
+margin-bottom: 0
 }
 
 .results--welsh .results__wrapper {
@@ -388,22 +388,22 @@ display: block
 }
 
 .recalls {
-padding: 10px;
-display: inline-block;
+margin-top: 0pt;
+padding-top: 0pt;
+margin-bottom: 8.5pt;
 }
 
 .recalls__icon {
-display: inline;
-padding-right: 32pt;
 float: left;
+display: inline-block;
 }
 
 .recalls__icon-img {
-
+height: 27pt;
 }
 
 .recalls__content {
-display: inline;
+display: inline-block;
 }
 
 .recalls__content-header {
