feat(CB2-14360): icon positioning

--- a/src/main/resources/assets/stylesheets/cvs-version-1.hbs
+++ b/src/main/resources/assets/stylesheets/cvs-version-1.hbs
@@ -396,10 +396,12 @@ margin-bottom: 8.5pt;
 .recalls__icon {
 float: left;
 display: inline-block;
+margin-right: 5pts;
 }
 
 .recalls__icon-img {
 height: 27pt;
+object-position: center;
 }
 
 .recalls__content {
