feat(CB2-14360): icon positioning

--- a/src/main/resources/assets/stylesheets/cvs-version-1.hbs
+++ b/src/main/resources/assets/stylesheets/cvs-version-1.hbs
@@ -394,14 +394,13 @@ margin-bottom: 8.5pt;
 }
 
 .recalls__icon {
-float: left;
 display: inline-block;
 margin-right: 5pts;
 }
 
 .recalls__icon-img {
 height: 27pt;
-object-position: center;
+object-position: bottom left;
 }
 
 .recalls__content {
