--- a/src/main/resources/views/CommercialVehicles/recalls.hbs
+++ b/src/main/resources/views/CommercialVehicles/recalls.hbs
@@ -4,6 +4,6 @@
     </div>
     <div class = "recalls__content">
         <h2 class = "recalls__content-header"> This vehicle has an outstanding recall </h2>
-        <span class = "recalls__content-text"> contact your nearest {{manufacturer}} dealership for information and to arrange a free repair. </span>
+        <span class = "recalls__content-text"> Contact your nearest {{manufacturer}} dealership for information and to arrange a free repair. </span>
     </div>
 </div>
