feat(CB2-14360): icon positioning

--- a/src/main/resources/assets/stylesheets/cvs-version-1.hbs
+++ b/src/main/resources/assets/stylesheets/cvs-version-1.hbs
@@ -395,16 +395,17 @@ margin-bottom: 8.5pt;
 
 .recalls__icon {
 display: inline-block;
-margin-right: 5pts;
+padding-right: 5pts;
 }
 
 .recalls__icon-img {
 height: 27pt;
-object-position: bottom left;
+object-position: center left;
 }
 
 .recalls__content {
 display: inline-block;
+padding-left: 5pts;
 }
 
 .recalls__content-header {
