feat(CB2-14360): icon positioning

--- a/src/main/resources/assets/stylesheets/cvs-version-1.hbs
+++ b/src/main/resources/assets/stylesheets/cvs-version-1.hbs
@@ -399,8 +399,9 @@ padding-right: 5pts;
 }
 
 .recalls__icon-img {
-height: 27pt;
+height: 15pt;
 object-position: center left;
+padding-right: 5pts;
 }
 
 .recalls__content {
