feat(CB2-14360): icon positioning

--- a/src/main/resources/assets/stylesheets/cvs-version-1.hbs
+++ b/src/main/resources/assets/stylesheets/cvs-version-1.hbs
@@ -395,18 +395,17 @@ margin-bottom: 8.5pt;
 
 .recalls__icon {
 display: inline-block;
-padding-right: 5pts;
+padding: 5px;
 }
 
 .recalls__icon-img {
-height: 15pt;
-object-position: center left;
-padding-right: 5pts;
+height: 22pt;
+object-position: top left;
 }
 
 .recalls__content {
 display: inline-block;
-padding-left: 5pts;
+padding: 5px;
 }
 
 .recalls__content-header {
