feat(CB2-14360): icon positioning

--- a/src/main/resources/assets/stylesheets/cvs-version-1.hbs
+++ b/src/main/resources/assets/stylesheets/cvs-version-1.hbs
@@ -400,7 +400,7 @@ padding: 5px;
 
 .recalls__icon-img {
 height: 22pt;
-object-position: top left;
+object-position: -10px -10px;
 }
 
 .recalls__content {
@@ -409,12 +409,12 @@ padding: 5px;
 }
 
 .recalls__content-header {
-padding-bottom: 0;
+padding-bottom: 1px;
 margin-bottom: 0;
 }
 
 .recalls__content-text {
-padding-top: 0;
+padding-top: 1px;
 margin-top: 0;
 }
 
