--- a/src/main/resources/assets/stylesheets/cvs-version-1.hbs
+++ b/src/main/resources/assets/stylesheets/cvs-version-1.hbs
@@ -391,6 +391,7 @@ display: block
 margin-top: 0pt;
 padding-top: 0pt;
 margin-bottom: 8.5pt;
+position: relative;
 }
 
 .recalls__icon {
@@ -401,6 +402,7 @@ padding: 5px;
 .recalls__icon-img {
 height: 22pt;
 object-position: -10px -10px;
+position: absolute;
 }
 
 .recalls__content {
