feat(CB2-14360): icon positioning

--- a/src/main/resources/assets/stylesheets/cvs-version-1.hbs
+++ b/src/main/resources/assets/stylesheets/cvs-version-1.hbs
@@ -395,18 +395,17 @@ position: relative;
 }
 
 .recalls__icon {
-display: inline-block;
+display: inline;
 padding: 5px;
 }
 
 .recalls__icon-img {
 height: 22pt;
-object-position: -10px -10px;
-position: absolute;
+object-position: -20px -20px;
 }
 
 .recalls__content {
-display: inline-block;
+display: inline;
 padding: 5px;
 }
 
