feat(CB2-14360): icon positioning

--- a/src/main/resources/assets/stylesheets/cvs-version-1.hbs
+++ b/src/main/resources/assets/stylesheets/cvs-version-1.hbs
@@ -392,6 +392,7 @@ margin-top: 0pt;
 padding-top: 0pt;
 margin-bottom: 8.5pt;
 position: relative;
+display: inline-block;
 }
 
 .recalls__icon {
@@ -401,6 +402,7 @@ padding: 5px;
 
 .recalls__icon-img {
 height: 22pt;
+object-position: -10px -5px;
 }
 
 .recalls__content {
