feat(CB2-14360): icon positioning

--- a/src/main/resources/assets/stylesheets/cvs-version-1.hbs
+++ b/src/main/resources/assets/stylesheets/cvs-version-1.hbs
@@ -388,36 +388,37 @@ display: block
 }
 
 .recalls {
-margin-top: 0pt;
+margin-top: 15pt;
 padding-top: 0pt;
-margin-bottom: 8.5pt;
-position: relative;
+margin-bottom: 15pt;
 display: inline-block;
 }
 
 .recalls__icon {
-display: inline;
-padding: 5px;
+padding: 5pt 15pt 0pt 0pt;
+float: left;
 }
 
 .recalls__icon-img {
 height: 22pt;
-object-position: -10px -5px;
 }
 
 .recalls__content {
-display: inline;
-padding: 5px;
+padding-left: 5pt;
+display: inline-block;
 }
 
 .recalls__content-header {
-padding-bottom: 1px;
-margin-bottom: 0;
+padding-bottom: 5pt;
+margin-bottom: 0pt;
+font-size: 1.5em;
+font-family: nta-bold;
+font-weight: 700;
 }
 
 .recalls__content-text {
-padding-top: 1px;
-margin-top: 0;
+padding-top: 1pt;
+margin-top: 0pt;
 }
 
 .test-information__two-columns {
