--- a/src/main/resources/views/CommercialVehicles/recalls.hbs
+++ b/src/main/resources/views/CommercialVehicles/recalls.hbs
@@ -3,7 +3,7 @@
         <img src="{{root}}/assets/images/info-icon.png" alt="info" class="recalls__icon-img"/>
     </div>
     <div class = "recalls__content">
-        <h2 class = "recalls__content-header"> This vehicle has an outstanding recall </h2>
+        <div class = "recalls__content-header"> This vehicle has an outstanding recall </div>
         <span class = "recalls__content-text"> Contact your nearest {{manufacturer}} dealership for information and to arrange a free repair. </span>
     </div>
 </div>
