--- a/src/main/resources/views/CommercialVehicles/VT12.hbs
+++ b/src/main/resources/views/CommercialVehicles/VT12.hbs
@@ -1,12 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
   <head>
-    <title>{{documentType}}</title>
+    <title id="documentType">{{documentType}}</title>
     <style type="text/css" media="print, screen">
         {{~> assets/stylesheets/version-1 this}}
         {{~> assets/stylesheets/cvs-version-1 this}}
     </style>
-        {{~> assets/stylesheets/vt12 this}}
+        {{~> assets/stylesheets/VT12 this}}
   </head>
   <body>
     <!-- certificate -->
@@ -18,34 +18,32 @@
           <div class="header">
             <img src="{{root}}/assets/images/dvsa_crest.png" alt="DVSA" class="header__crest-img"/>
             <div class="header__title-text">
-              <div class="bold-text">
+              <div class="bold-text" id="firstPageTitle">
                 Notification of Failure to Comply with the Conditions of Acceptance of a
                   {{titleTextIncludingRollingHeaders}} ({{documentType}})
               </div>
             </div>
-            <div class="standard-text regulation-text">
+            <div class="standard-text regulation-text" id="regulationText">
               {{regulationText}}
             </div>
           </div>
 
           <!-- footer -->
           <div class="footer-left">
-            <b>{{documentType}}</b><span> (DVSA {{data.testNumber}})</span>
+            <b id="footerDocumentType">{{documentType}}</b><span id="footerTestNumber"> (DVSA {{data.testNumber}})</span>
           </div>
           <div class="footer-right">
-            <p>Date ({{data.datePopulated}})</p>
+            <p id="footerDatePopulated">Date ({{data.datePopulated}})</p>
           </div>
           <!-- /footer -->
 
-          <div class="standard-text">
-            {{#if documentType "VTG12"}}
-              In respect of the goods vehicle with registration number / chassis serial number / trailer identification mark :
-            {{/if}}
+          <div class="standard-text" id="vehicleTypeText">
+            {{vehicleTypeText}}
           </div>
 
           <div class="vin-wrapper">
             {{#each data.vin}}
-              <span class="vin-text">
+              <span class="vin-text" id="vin_{{@index}}">
                 {{this}}
               </span>
             {{/each}}
@@ -73,7 +71,7 @@
 
           <ul>
             {{#each data.reasonsForAbandonment}}
-              <li class="standard-text">{{this}}</li>
+              <li class="standard-text" id="reasonsForAbandonment_{{@index}}">{{this}}</li>
             {{/each}}
           </ul>
 
@@ -85,7 +83,7 @@
 
       <div class="additional-comments-header bold-text">Additional Comments</div>
 
-      <div class="additional-comments-box">
+      <div class="additional-comments-box" id="additionalComments">
         {{data.additionalComments}}
       </div>
 
@@ -113,7 +111,7 @@
 
       <div class="data-protection-box">
         <div class="data-protection-text bold-text">Data Protection</div>
-        <div class="data-protection-text">
+        <div class="data-protection-text" id="dataProtectionWithDocumentType">
           We Collect, use and store your personal data so that we can correctly issue your vehicle with a {{documentType}} failure notification.
         </div>
         <div class="data-protection-text">
