--- a/src/main/resources/views/CommercialVehicles/VT12.hbs
+++ b/src/main/resources/views/CommercialVehicles/VT12.hbs
@@ -30,10 +30,10 @@
 
           <!-- footer -->
           <div class="footer-left">
-            <b id="footerDocumentType">{{documentType}}</b><span id="footerTestNumber"> (DVSA {{data.testNumber}})</span>
+            <b id="footerDocumentType">{{documentType}}</b><span id="footerTestNumber"> (DVSA {{testNumber}})</span>
           </div>
           <div class="footer-right">
-            <p id="footerDatePopulated">Date ({{data.datePopulated}})</p>
+            <p id="footerDatePopulated">Date ({{data.dateOfTheTest}})</p>
           </div>
           <!-- /footer -->
 
@@ -42,7 +42,7 @@
           </div>
 
           <div class="vin-wrapper">
-            {{#each data.vin}}
+            {{#each data.chassisNumber}}
               <span class="vin-text" id="vin_{{@index}}">
                 {{this}}
               </span>
@@ -70,7 +70,7 @@
 
 
           <ul>
-            {{#each data.reasonsForAbandonment}}
+            {{#each data.reasonsForRefusal}}
               <li class="standard-text" id="reasonsForAbandonment_{{@index}}">{{this}}</li>
             {{/each}}
           </ul>
@@ -90,22 +90,22 @@
       <table class="table">
         <tr>
           <td class="table-row-cell table-row-left"><b>Signature: </b></td>
-          <td class="table-row-cell table-row-right" colspan="3"></td>
+          <td class="table-row-cell table-row-right" colspan="3">{{data.signature}}</td>
 
         </tr>
         <tr>
           <td class="table-row-cell table-row-left"><b>Print Name: </b></td>
-          <td class="table-row-cell table-row-right" colspan="3"></td>
+          <td class="table-row-cell table-row-right" colspan="3">{{data.issuersName}}</td>
         </tr>
         <tr>
           <td class="table-row-cell table-row-left"><b>Location: </b></td>
-          <td class="table-row-cell table-row-right" colspan="3"></td>
+          <td class="table-row-cell table-row-right" colspan="3">{{data.testStationName}}</td>
         </tr>
         <tr>
           <td class="table-row-cell last-row-first-column"><b>Location Number: </b></td>
-          <td class="table-row-cell last-row-second-column"></td>
+          <td class="table-row-cell last-row-second-column">{{data.testStationPNumber}}</td>
           <td class="table-row-cell last-row-third-column"><b>Date: </b></td>
-          <td class="table-row-cell last-row-fourth-column"></td>
+          <td class="table-row-cell last-row-fourth-column">{{data.dateOfTheTest}}</td>
         </tr>
       </table>
 
