feat(CB2-15349): adding new fields to match prototype: payload

--- a/src/main/resources/assets/stylesheets/VT12.hbs
+++ b/src/main/resources/assets/stylesheets/VT12.hbs
@@ -183,6 +183,7 @@
   .table-row-right {
     width: 75%;
     border: 1px solid black;
+    padding-left: 5px;
   }
 
   .last-row-first-column {
@@ -193,6 +194,7 @@
   .last-row-second-column {
     width: 30%;
     border: 1px solid black;
+    padding-left: 5px;
   }
 
   .last-row-third-column {
@@ -204,6 +206,7 @@
   .last-row-fourth-column {
     width: 30%;
     border: 1px solid black;
+    padding-left: 5px;
   }
 
 </style>
