--- a/src/main/resources/assets/stylesheets/VT12.hbs
+++ b/src/main/resources/assets/stylesheets/VT12.hbs
@@ -33,30 +33,31 @@
     page-break-before: always
   }
 
-
-
   .header__crest-img {
-    min-width: 110px;
-    min-height: 69px;
-    width: 110px;
-    height: 69px;
+    min-width: 180px;
+    min-height: 112px;
+    width: 180px;
+    height: 112px;
     float: left;
   }
 
   .header {
     border-bottom: 4px solid black;
-    padding: 10px 0 10px 0;
+    padding-bottom: 24px;
   }
 
-  .header__title-text {
+  .title-text {
     padding-bottom: 6px;
     margin-right: 1.8cm;
     text-align: right;
-    margin-left: 255px;
+    margin-left: 210px;
+    font-weight: bold;
+    font-size: 21px;
+    line-height: 24px;
   }
 
   .regulation-text {
-    margin-left: 300px;
+    margin-left: 290px;
     text-align: right;
   }
 
@@ -97,6 +98,7 @@
     }
   }
   @page :first {
+    margin: 1cm 1.5cm 50px 1cm;
     @top-left {
       content: normal;
     }
@@ -144,7 +146,7 @@
   }
 
   .data-protection-box {
-    background: #c0c0c0;
+    background: #d2d2d2;
     padding: 5px;
     margin-top: 10px;
   }
