feat(CB2-15349): updating test and vbs for latest requested changes

--- a/src/main/resources/assets/stylesheets/VT12.hbs
+++ b/src/main/resources/assets/stylesheets/VT12.hbs
@@ -73,7 +73,7 @@
     padding: 0 5px 0 5px;
   }
 
-  #paragraph-after-vin {
+  #sectionText {
     padding-bottom: 24px;
   }
 
@@ -105,6 +105,7 @@
   }
 
   .footer-left {
+    font-size: 1.25em;
     position: running(footer-left);
   }
 
@@ -119,13 +120,13 @@
     float: left;
     border: 1px solid transparent;
     width: 300px;
+    padding-top: 16px;
+    font-weight: bold;
   }
 
   .running-header {
     position: running(running-header);
     border-bottom: 4px solid gray;
-    margin-bottom: 10px;
-    padding-bottom: 10px;
   }
 
   .back-page {
