feat(CB2-15349): fixes requested from reviews

--- a/src/main/resources/views/CommercialVehicles/Abandoned.hbs
+++ b/src/main/resources/views/CommercialVehicles/Abandoned.hbs
@@ -5,7 +5,7 @@
     <style type="text/css" media="print, screen">
         {{~> assets/stylesheets/version-1 this}}
         {{~> assets/stylesheets/cvs-version-1 this}}
-        {{~> assets/stylesheets/VT12 this}}
+        {{~> assets/stylesheets/Abandoned this}}
     </style>
   </head>
   <body>
@@ -31,7 +31,7 @@
           <!-- footer -->
           <div class="footer-left">
             <b id="footerDocumentType">{{documentType}}</b>
-            <span id="footerTestNumber"><b> (DVSA{{testNumber}})</b></span>
+            <span id="footerTestNumber"><b> (DVSA{{formNumber}})</b></span>
           </div>
           <div class="footer-right">
             <p id="footerDatePopulated" class="bold-text">Jan 2025</p>
