feat(CB2-15349): html change for correct title

--- a/src/main/resources/views/CommercialVehicles/Abandoned.hbs
+++ b/src/main/resources/views/CommercialVehicles/Abandoned.hbs
@@ -20,7 +20,9 @@
             <div class="title-text">
               <div class="bold-text" id="firstPageTitle">
                 Notification of Failure to Comply with the Conditions of Acceptance of a
+                <div>
                   {{titleTextIncludingRollingHeaders}} ({{documentType}})
+                </div>
               </div>
             </div>
             <div class="standard-text regulation-text" id="regulationText">
